overflow tab item offset bug

--- a/projects/OG-Web/web-engine/prototype/styles/common/og.common.OG-tab-overflow-panel.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/og.common.OG-tab-overflow-panel.css
@@ -28,3 +28,7 @@
 .OG-tab-overflow-panel .OG-multiselect {
     display: none;
 }
+
+.OG-tab-overflow-panel .OG-gadget-tabs-label {
+    top: 0;
+}
